2007-10-03  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Execution/NativePlatformExecutionHandler.cs,
	  MonoDevelop.Core.Execution/MintPlatformExecutionHandler.cs,
	  MonoDevelop.Core.Execution/MonoPlatformExecutionHandler.cs,
	  MonoDevelop.Core.Execution/IExecutionHandler.cs: Allow setting
	  environment variables when processes via an IExecutionHandler.
	* MonoDevelop.Core.Execution/ProcessService.cs: Allow setting environment
	  variables when starting console processes.

2007-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.mdp: Fix warning level.
	* MonoDevelop.Core/Properties.cs: When getting the value of a property, if
	  it is a LazyXmlDeserializer, deserialize it and store the deserialized
	  value in the internal dictionary. In this way the next time the property
	  is requested, the same object will be returned, insted of deserializing
	  the data every time.

2007-09-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/PropertyService.cs: In SaveProperties, create the
	  configuration path if it doesn't exist.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.addin.xml: Bump MD version.

2007-09-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/XmlReadHelper.cs: Fixed XmlReadHelper behavior - starting
	  nodes are only read once.

2007-09-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/XmlReadHelper.cs: XmlReadHelper - already read starting
	  node message is now more verbose.

2007-09-12  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Execution/ProcessService.cs: Escape arguments to xterm
	  external console. Set xterm title so it doesn't display the 'internal'
	  commands.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.AddIns/PackageExtensionNode.cs,
	  MonoDevelop.Core/SystemAssemblyService.cs: Don't use the extension node
	  Id to identify packages because that Id must be unique, but there can be