@@ -16,7 +16,6 @@
   <Contents>
     <File name="./MonoDevelop.Core/AbstractService.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Core/IService.cs" subtype="Code" buildaction="Compile" />
-    <File name="./MonoDevelop.Core/IStringTagProvider.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Core/ServiceManager.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Core/StringParserService.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Core/UserException.cs" subtype="Code" buildaction="Compile" />
@@ -79,7 +78,6 @@
     <File name="./MonoDevelop.Core.AddIns/ApplicationExtensionNode.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Core.ProgressMonitoring/FilteredProgressMonitor.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Core/Properties.cs" subtype="Code" buildaction="Compile" />
-    <File name="./MonoDevelop.Core/CharacterEncodings.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Core/PropertyChangedEventArgs.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Core/PropertyService.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Core/XmlReadHelper.cs" subtype="Code" buildaction="Compile" />
