@@ -1,25 +1,0 @@
-// <file>
-//     <copyright see="prj:///doc/copyright.txt"/>
-//     <license see="prj:///doc/license.txt"/>
-//     <owner name="Mike Krüger" email="mike@icsharpcode.net"/>
-//     <version value="$version"/>
-// </file>
-
-using System;
-using System.Text.RegularExpressions;
-using System.Collections;
-using System.Collections.Specialized;
-
-using MonoDevelop.Core;
-
-namespace MonoDevelop.Core
-{
-	public interface IStringTagProvider 
-	{
-		string[] Tags {
-			get;
-		}
-		
-		string Convert(string tag);
-	}
-}
